welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:28: error: ';' expected but 'for' found.
	avance(5)for (h<- 0 to 3 ) {faireV()}
                 ^